syntax = "proto3";

package def.gateway;

option java_package = "com.commelina.math24.play.gateway.proto";
option java_outer_classname = "MethodProtos";
option java_multiple_files = true;

// 接口列表
enum GATEWAY_METHODS {
    // 登录
    PASSPORT_CONNECT = 0;
    // 用户状态查询
    MEMEBER_STATUS = 1;
    // 房间状态查询
    ROOM_STATUS = 2;
}